--- a/wwwroot/css/course-detail.css
+++ b/wwwroot/css/course-detail.css
@@ -7,12 +7,21 @@
 }
 
 .course-container {
-  margin-top: 80px;
-  margin-bottom: 60px;
+  margin-top: 100px;
+  margin-bottom: 150px;
+  display: block;
 }
 
 .course-info-container {
   display: flex;
+  flex-wrap: wrap;
+}
+
+.course-container .course-intro-section {
+  margin-left: 20px;
+  margin-right: 20px;
+  margin-top: 15px;
+  padding: 30px;
 }
 
 .image-section {
@@ -35,9 +44,14 @@
   padding: 10px;
 }
 
-.course-available-time {
+.course-available-time-container {
   margin-left: 20px;
   margin-right: 20px;
   margin-top: 15px;
+  padding: 30px;
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.course-available-time-container .title-section {
+  text-align: center;
 }
