feat: finish shows user bookings on page and its flow

--- a/wwwroot/css/user-portal.css
+++ b/wwwroot/css/user-portal.css
@@ -16,7 +16,7 @@
   font-size: xx-large;
 }
 
-.links-container .my-appointment {
+.links-container .my-bookings {
   background-color: #85ccfbff;
 }
 
