--- a/wwwroot/css/online-course.css
+++ b/wwwroot/css/online-course.css
@@ -13,35 +13,57 @@
 }
 
 .left-section {
-  width: 75%;
+  width: 70%;
   padding: 15px;
 }
 
 .right-section {
-  width: 25%;
+  width: 30%;
   padding: 15px;
 }
 
 /* 視訊部分 */
 .video-container {
+  position: relative;
+  width: 100%;
+  height: 75vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.local-video-test {
+  position: absolute;
+  width: 100%;
+  top: -300px;
+  z-index: 1;
 }
 
 .video-grid {
+  position: absolute;
+  display: flex;
+  flex-direction: column-reverse;
   width: 100%;
 }
 
-.video-grid > video {
-  z-index: 0;
+.local-video {
+  position: absolute;
+  right: 0;
+  width: 30%;
+  z-index: 1;
 }
 
 video:not(.local-video) {
+  width: 100%;
+  height: 600px;
+  z-index: 0;
 }
 
 .button-container {
-  position: relative;
-  bottom: 50px;
-  left: 10px;
-  z-index: 1;
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  z-index: 2;
 }
 
 /* 文字對話框 */
@@ -52,6 +74,7 @@ video:not(.local-video) {
 }
 
 .chat-content {
+  background-color: aliceblue;
   height: 100%;
   margin-bottom: 10px;
   border: 1px solid #ccc;
@@ -63,6 +86,7 @@ video:not(.local-video) {
 }
 
 .chat-input {
+  background-color: aliceblue;
   width: 75%;
   height: 100%;
   padding: 10px;
