--- a/wwwroot/css/index.css
+++ b/wwwroot/css/index.css
@@ -6,6 +6,10 @@ body {
   background-color: rgb(234, 239, 247);
 }
 
+.navbar-brand img {
+  width: 55px;
+}
+
 .loading {
   text-align: center;
   position: relative;
