feat: add admin backstage page

--- a/wwwroot/css/admin-portal.css
+++ b/wwwroot/css/admin-portal.css
@@ -24,6 +24,10 @@
   background-color: #85ccfbff;
 }
 
+.links-container .dashboard {
+  background-color: #85ccfbff;
+}
+
 .links-container .signout {
   background-color: rgb(105, 226, 163);
 }
