--- a/wwwroot/css/dashboard.css
+++ b/wwwroot/css/dashboard.css
@@ -36,7 +36,7 @@
   margin-top: 50px;
   padding: 10px;
   font-size: 20px;
-  background-color: rgb(200, 200, 200);
+  background-color: lightpink;
 }
 
 .dashboard-container .other-data-container {
@@ -46,5 +46,5 @@
   margin-bottom: 50px;
   padding: 10px;
   font-size: 20px;
-  background-color: rgb(200, 200, 200);
+  background-color: lightpink;
 }
