--- a/wwwroot/css/teacher-application.css
+++ b/wwwroot/css/teacher-application.css
@@ -1,9 +1,10 @@
 .form-container {
   margin-top: 80px;
+  padding: 50px 0;
 }
 
-.form-container {
-  padding: 50px 0;
+.form-group {
+  margin-bottom: 20px;
 }
 
 .form-container form {
