feat: visualize dashboard

--- a/wwwroot/css/teacher-dashboard.css
+++ b/wwwroot/css/teacher-dashboard.css
@@ -1,13 +1,10 @@
 .unit {
   font-size: 16px;
-  position: absolute;
-  top: 65%;
-  left: 80%;
 }
 
 .dashboard-container {
   width: 90%;
-  height: auto;
+  height: 100%;
   margin: 100px auto;
   border-radius: 30px;
   /* position: relative; */
@@ -16,18 +13,6 @@
   align-items: center;
   flex-direction: column;
   background-color: antiquewhite;
-}
-
-.dashboard-container .platform-data-container {
-  width: 90%;
-  height: 30%;
-  padding: 10px;
-  font-size: 20px;
-  margin-top: 20px;
-}
-
-.dashboard-container label {
-  margin-top: 10px;
 }
 
 .dashboard-container .reportrange {
@@ -41,7 +26,7 @@
   text-align: center;
 }
 
-.dashboard-container .transaction-data-container {
+.dashboard-container .salary-data-container {
   width: 90%;
   height: 30%;
   padding: 10px;
@@ -63,11 +48,10 @@
   margin-bottom: 50px;
   padding: 10px;
   font-size: 20px;
-  background-color: lightpink;
 }
 
-/* platform-data-container */
-.dashboard-container .platform-data-container {
+/* salary-data-container */
+.dashboard-container .salary-data-container {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
@@ -75,67 +59,8 @@
   margin: 20px;
 }
 
-.platform-data-container .data-card {
-  margin: 20px;
-  background-color: #eeeeee;
-  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
-  position: relative;
-  width: 300px;
-  height: 400px;
-}
-
-.platform-data-container .data-chart {
-  width: 300px;
-  height: 300px;
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-
-.platform-data-container canvas {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-
-.platform-data-container .label {
-  width: 300px;
-  position: absolute;
-  top: 53%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  font-size: 40px;
-}
-
-.platform-data-container .amount {
-  width: 300px;
-  position: absolute;
-  top: 53%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-  font-size: 100px;
-}
-
-.platform-data-container .title {
-  position: absolute;
-  top: 1rem;
-}
-
-/* transaction-data-container */
-.dashboard-container .transaction-data-container {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  align-items: center;
-  margin: 20px;
-}
-
-.transaction-data-container .data-card {
-  margin: 20px;
+.salary-data-container .data-card {
+  margin: 0px 20px;
   background-color: #85ccfbff;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
   position: relative;
@@ -143,7 +68,7 @@
   height: 200px;
 }
 
-.transaction-data-container .data-chart {
+.salary-data-container .data-chart {
   width: 200px;
   height: 200px;
   display: flex;
@@ -152,14 +77,14 @@
   align-items: center;
 }
 
-.transaction-data-container canvas {
+.salary-data-container canvas {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
-.transaction-data-container .label {
+.salary-data-container .label {
   width: 200px;
   position: absolute;
   top: 53%;
@@ -169,7 +94,7 @@
   font-size: 40px;
 }
 
-.transaction-data-container .amount {
+.salary-data-container .amount {
   width: 200px;
   position: absolute;
   top: 53%;
@@ -179,9 +104,25 @@
   font-size: 40px;
 }
 
-.transaction-data-container .title {
+.salary-data-container .title {
   position: absolute;
   top: 1rem;
+}
+
+.salary-data-container .unit {
+  position: absolute;
+  top: 65%;
+  left: 80%;
+}
+
+.salary-data-container .calculation {
+  width: 200px;
+  position: absolute;
+  top: 35%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 16px;
 }
 
 /* course-data-container */
@@ -194,7 +135,7 @@
 }
 
 .course-data-container .data-card {
-  margin: 20px;
+  margin: 0px 20px;
   background-color: #85ccfbff;
   box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
   position: relative;
@@ -238,7 +179,78 @@
   font-size: 40px;
 }
 
+.course-data-container .unit {
+  position: absolute;
+  top: 65%;
+  left: 80%;
+}
+
 .course-data-container .title {
+  position: absolute;
+  top: 1rem;
+}
+
+/* other-data-container */
+.dashboard-container .other-data-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+}
+
+.other-data-container .data-card {
+  margin: 0px 20px;
+  background-color: #85ccfbff;
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.3);
+  position: relative;
+  width: 200px;
+  height: 200px;
+}
+
+.other-data-container .data-chart {
+  width: 200px;
+  height: 200px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.other-data-container canvas {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.other-data-container .label {
+  width: 200px;
+  position: absolute;
+  top: 53%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 40px;
+}
+
+.other-data-container .amount {
+  width: 200px;
+  position: absolute;
+  top: 53%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  font-size: 40px;
+}
+
+.other-data-container .unit {
+  position: absolute;
+  top: 65%;
+  left: 80%;
+}
+
+.other-data-container .title {
   position: absolute;
   top: 1rem;
 }
